--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,10 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "socket.io-client": "^4.7.4",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
